# hexplode

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/backend/: api.py  store.py
src/frontend/: .prettierrc  package-lock.json  package.json  webpack.config.js
src/frontend/src/: App.svelte  gameService.js  stores.js
src/frontend/src/components/: Board.svelte  Button.svelte  CreateGame.svelte  GameOver.svelte  Range.svelte  Tile.svelte
src/hexplode/: api.py  board.py  bot.py  game.py  models.py  store.py
tests/: test_board.py  test_game.py  test_hexplode.py
