[tool.black]
line_length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry]
name = "hexplode"
version = "0.1.0"
description = "Pluggable Python implementation of a BBC Micro classic"
authors = ["tcbegley <tomcbegley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
asyncio-redis = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
