[tool.black]
line_length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["backend", "hexplode"]
known_third_party = ["asyncio_redis", "fastapi", "pydantic"]

[tool.poetry]
name = "hexplode"
version = "0.2.0"
description = "Pluggable Python implementation of a BBC Micro classic"
authors = ["tcbegley <tomcbegley@gmail.com>"]
exclude = ["src/frontend"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7"
fastapi = "^0.61.1"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
asyncio-redis = "^0.16.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
nox = "^2021.6.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
